set(ENV{OPENSSL_ROOT_DIR} ${CMAKE_CURRENT_LIST_DIR})

add_library(OpenSSL::SSL STATIC IMPORTED GLOBAL)
set_target_properties(OpenSSL::SSL PROPERTIES
	INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_LIST_DIR}/include
	IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/lib/libssl.lib
	IMPORTED_LOCATION_DEBUG ${CMAKE_CURRENT_LIST_DIR}/lib/libssl.lib
)

add_library(OpenSSL::Crypto STATIC IMPORTED GLOBAL)
target_link_libraries(OpenSSL::Crypto INTERFACE 
	crypt32
)
set_target_properties(OpenSSL::Crypto PROPERTIES
	INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_LIST_DIR}/include
	IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/lib/libcrypto.lib
	IMPORTED_LOCATION_DEBUG ${CMAKE_CURRENT_LIST_DIR}/lib/libcrypto.lib
)